--- a/index.html
+++ b/index.html
@@ -699,6 +699,61 @@
             'The shrinking sales tax base is not unique to Illinois. States tend to levy sales taxes on goods, even though the services sector now makes up a much larger share of the economy than when sales tax statutes were written in the 1930s. Over time, the decreasing tax base has contributed to the stagnation of sales tax collections per person in Illinois, even as the rate has increased.']
         },
         {
+          url: 'illinois-has-highest-combined-average-sales-tax-among-neighbors',
+          name: 'Illinois Has the Highest Combined Average Sales Tax Rate among Its Neighbors',
+          subtitle: 'Combined State and Average Local Sales Tax Rates, Illinois and Neighbors (as of July 1, 2014)',
+          image: 'images/5-1.svg',
+          format: 'square',
+          body: ['Sales taxes in most states are levied at both the state and local levels. Illinois’ state-level rate (6.25 percent), which is already high compared to other states, is made higher by the additional local taxes that are tacked on top.',
+          'When both are considered, Illinois has the highest combined average rate among its neighbors and the 10th highest rate in the country. Local sales taxes, on average, amount to 1.94 percent. Indiana, Kentucky, and Michigan do not levy local sales taxes.'],
+          callout: '',
+          source: ['Source: Tax Foundation, Facts & Figures 2015: How Does Your State Compare?']
+        },
+        {
+          url: 'state-level-sales-tax-rate-risen-over-time',
+          name: 'State-Level Sales Tax Rate Has Risen over Time',
+          subtitle: 'Illinois’ State Sales Tax Rate (1933-2015)',
+          image: 'images/5-2.svg',
+          format: 'wide',
+          body: ['Since its creation in 1933, Illinois’ state sales tax rate has more than tripled from 2 percent to 6.25 percent today. Except for two brief rate decreases (one in 1941 and another in 1969), the sales tax rate has increased over time. The current state-level rate of 6.25 percent is the 12th highest in the country.'],
+          callout: '',
+          source: ['Note: This does not include local option sales taxes (see previous page).',
+          'Source: Illinois Commission on Government Forecasting and Accountability, Sales Taxes in Illinois (May 2010); Commerce Clearing House.']
+        },
+        {
+          url: 'illinois-sales-tax-applies-to-less-and-less',
+          name: 'Illinois’ Sales Tax Applies to Less and Less of the Economy',
+          subtitle: 'Illinois’ Sales Tax Breadth (1970-2013)',
+          image: 'images/5-3.svg',
+          format: 'square',
+          body: ['An ideal sales tax is one that is levied on all final consumer purchases. By taxing a large number of transactions, the rate can be kept low and still raise sufficient revenue.',
+          'When sales taxes were created in the 1930s, they were levied on tangible goods, which at the time were a large part of the overall economy. However, the economy has become more service based since then. As a result, the sales tax is not nearly as productive. Further, by failing to tax consumer services, the sales tax inherently favors the services sector of the economy over the goods sector.'],
+          callout: '',
+          source: ['Note: Sales tax breadth is defined as the ratio of the implicit sales tax base to state personal income.',
+          'Source: Professor John Mikesell (Indiana University).']
+        },
+        {
+          url: 'illinois-has-lower-sales-tax-collections-per-person-than-us',
+          name: 'Even with High Rates, Illinois Has Lower Sales Tax Collections per Person than the U.S.',
+          subtitle: 'Total State and Local Sales Tax Collections per Capita, Illinois and U.S. (1977-2012, in 2012 Dollars)',
+          image: 'images/5-4.svg',
+          format: 'wide',
+          body: ['Illinois’ state and local sales tax collections per person are much lower than the U.S. average, despite the fact that the state has a comparatively high total sales tax rate. While inflation-adjusted total U.S. collections exhibit an upward trend over time, Illinois’ collections have remained relatively flat, despite several historical rate increases. '],
+          callout: '',
+          source: ['Note: Dollar amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2012 base year. Because local data is unavailable for 2001 and 2003, those points were excluded here, and points surrounding these years are connected with dotted lines.',
+          'Source: Census Bureau, State and Local Government Finances; Census Bureau, American Community Survey; Bureau of Labor Statistics, Consumer Price Indexes. ']
+        },
+        {
+          url: 'not-all-sales-tax-expenditures-created-equal',
+          name: 'Not All Sales Tax Expenditures Are Created Equal',
+          subtitle: 'Illinois’ Sales and Use Tax Expenditures, by Type (FY 2013)',
+          image: 'images/5-5.svg',
+          format: 'wide',
+          body: ['When states quantify tax expenditures, they often mistakenly lump structural provisions with social policy carve-outs, when the two should be distinct. The former are tools used to ensure the sales tax is correctly structured—such as exemptions for business input purchases (to avoid tax pyramiding). Approximately 34 percent of sales tax expenditures fall into this category. Social policy carve-outs are specific policy decisions enacted for a certain purpose (56 percent fall into this category).'],
+          callout: '',
+          source: ['Source: State of Illinois Comptroller, Tax Expenditure Report (Fiscal Year 2013).']
+        },
+        {
           url: 'Chapter-6',
           name: 'Chapter 6',
           subtitle: 'Excise Taxes in Illinois',
