Add chapters 6 and 7

--- a/index.html
+++ b/index.html
@@ -765,6 +765,51 @@
             'Gasoline excise taxes in most states aren’t indexed for inflation, meaning that their value has eroded over time. This is also true for Illinois, however, gasoline is subject to the sales tax in Illinois as well as an excise tax. Sin taxes in Illinois, except for those on beer, tend to be comparatively high nationally. Wireless taxes are also well above the national average in Illinois.']
         },
         {
+          url: 'illinois-total-excise-tax-collections-are-high',
+          name: 'Illinois’ Total Excise Tax Collections per Person Are High',
+          subtitle: 'Total State and Local Excise Tax Collections per Capita, Illinois and U.S. (1977-2012, in 2012 Dollars)',
+          image: 'images/6-1.svg',
+          format: 'wide',
+          body: ['When all state and local excise taxes are considered, Illinois’ collections per capita are well above the national average. Excise taxes include those levied on the purchase of gasoline, alcohol, cigarettes and other tobacco products, amusements, insurance premiums, public utilities, and others. '],
+          callout: '',
+          source: ['Note: Dollar amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2012 base year. Because local data is unavailable for 2001 and 2003, those points were excluded here, and points surrounding these years are connected with dotted lines.',
+          'Source: Census Bureau, State and Local Government Finances; Census Bureau, American Community Survey; Bureau of Labor Statistics, Consumer Price Indexes.']
+        },
+        {
+          url: 'value-of-illinois-gas-tax-declined-over-time',
+          name: 'The Value of Illinois’ Gas Tax Has Declined over Time',
+          subtitle: 'Illinois’ Gasoline Tax Rate, Nominal and Real (1927-2014)',
+          image: 'images/6-2.svg',
+          format: 'wide',
+          body: ['All states tax motor fuels with excise taxes on gasoline and diesel. Illinois’ gas tax started at 2 cents per gallon in 1927 and has increased periodically to today’s 20.1 cents per gallon (yellow line). The blue line shows each year’s tax rate expressed in today’s cents. For example, the 5 cent per gallon tax in 1957 is the equivalent of 42 cents per gallon today.'],
+          callout: '',
+          source: ['Note: Amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2014 base year. Rates include the state gasoline excise tax, environmental impact fee, and underground storage fee. Fees are scheduled to sunset in January 2025. Rates do not include local excise taxes or state sales tax.',
+          'Source: Illinois General Assembly, Illinois Compiled Statutes; U.S. Federal Highway Administration, Highway Statistics; Bureau of Labor Statistics, Consumer Price Indexes.']
+        },
+        {
+          url: 'illinois-state-excise-taxes-cigarettes-alcohol',
+          name: 'Illinois’ State Excise Taxes on Cigarettes and Alcohol',
+          subtitle: 'State Excise Tax Rates on Cigarettes, Spirits, Wine, and Beer (as of January 1, 2015)',
+          image: 'images/6-3.svg',
+          format: 'wide',
+          body: ['Taxes on cigarettes and different types of alcohol are often referred to as “sin” taxes. While excise taxes on the sale of these specific types of goods should be used to offset the social costs created by their private use (such as the health issues associated with cigarette and alcohol use), sin taxes should not be used as a means to raise general revenues. The revenues aren’t sustainable over the long run, and these taxes tend to be regressive.',
+          'Illinois has relatively high state-level taxes on cigarettes, spirits, and wine. Taxes on beer are more competitive. Local taxes are not included here, which can be substantial. '],
+          callout: '',
+          source: ['Note: The cigarette tax rate assumes 20 cigarettes in a pack.',
+          'Source: Tax Foundation, Facts & Figures 2015: How Does Your State Compare?']
+        },
+        {
+          url: 'illinois-taxpayers-face-high-wireless-taxes',
+          name: 'Illinois Taxpayers Face High Wireless Service Taxes',
+          subtitle: 'Charges on Wireless Service, Illinois and U.S. Average (as of July 2014)',
+          image: 'images/6-4.svg',
+          format: 'square',
+          body: ['Wireless consumers continue to face excessive tax burdens when compared to the tax burden on other goods and services purchased in the competitive marketplace. The average rates of taxes and fees on wireless telephone services are more than two times higher than the average sales tax rates that apply to most other taxable goods and services.',
+          'When federal, state, and local taxes and fees on wireless service are considered, Illinois taxpayers face the fifth highest effective tax rate in the country (21.63 percent). This is considerably higher than the U.S. average of 17.05 percent.'],
+          callout: '',
+          source: ['Source: Tax Foundation, Wireless Taxation in the United States 2014.']
+        },
+        {
           url: 'Chapter-7',
           name: 'Chapter 7',
           subtitle: 'Property Taxes in Illinois',
@@ -776,14 +821,52 @@
             'When we discuss property taxes, we’re often describing many layers of taxation at the local level—taxes levied by towns, cities, counties, school districts, and even specific-purpose districts such as those dedicated to fire protection. Because of this, effective property tax rates vary widely by county but also exhibit much intra-county variation, as well.']
         },
         {
-          url: '',
-          name: '',
-          subtitle: '',
+          url: 'illinois-has-high-property-tax-collections-per-person',
+          name: 'Illinois Has High Property Tax Collections per Person',
+          subtitle: 'Total State and Local Property Tax Collections per Capita, Illinois and U.S. (1977-2012, in 2012 Dollars)',
           image: 'images/7-1.svg',
           format: 'wide',
-          body: [''],
+          body: ['Only real property is taxed in Illinois, while personal property (things other than land and buildings, such as cars and furniture) is untaxed. Inflation-adjusted property tax collections per person in Illinois are higher than U.S. collections per person and have been since 1977. Based on this measure of property taxes, Illinois’ are some of the highest in the nation, ranking 10th as of 2012.'],
           callout: '',
-          source: ''
+          source: ['Note: Dollar amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2012 base year. Because local data is unavailable for 2001 and 2003, those points were excluded here, and points surrounding these years are connected with dotted lines.',
+          'Source: Census Bureau, State and Local Government Finances; Census Bureau, American Community Survey; Bureau of Labor Statistics, Consumer Price Indexes; Illinois Department of Revenue, The Illinois Property Tax System.']
+        },
+        {
+          url: 'illinois-residential-property-tax-rates-are-high',
+          name: 'Illinois’ Residential Effective Property Tax Rates Are Comparatively High',
+          subtitle: 'Aggregate Real Estate Taxes Paid as a Percent of Aggregate Housing Value of Owner-Occupied Housing Units (5-Year Estimate, 2009-2013)',
+          image: 'images/7-2.svg',
+          format: 'square',
+          body: ['One way to look at state property taxes is to calculate a state’s residential effective tax rate and see how it stacks up compared to other states’. Illinois’ residential effective rate is third highest in the nation—outranked only by New Jersey’s and New Hampshire’s. In the region, only Wisconsin’s rate comes anywhere close to Illinois’.',
+          'However, this measure of property taxes is a state average, so it does not demonstrate the variation in residential effective rates among and within counties in the state. And because this measure looks specifically at residential property, business property is not included.'],
+          callout: '',
+          source: ['Note: “Residential Effective Property Tax Rate” is calculated by dividing the total real estate (property) taxes paid in a state by the state’s total housing value (owner-occupied units only). The American Community Survey data used here is based on 5-year estimates (2009 to 2013). This data does not include commercial property.',
+          'Source: Census Bureau, American Community Survey.']
+        },
+        {
+          url: 'residential-property-tax-rates-vary-widely-among-counties',
+          name: 'Residential Effective Property Tax Rates Vary Widely among Counties',
+          subtitle: 'Aggregate Real Estate Taxes Paid as a Percent of Aggregate Housing Value of Owner-Occupied Housing Units (5-Year Estimate, 2009-2013)',
+          image: 'images/7-3.svg',
+          format: 'square',
+          body: ['On average, the residential effective property tax rate in Illinois (using a five year average from 2009 to 2013) was 1.92 percent, though county-specific values vary around this mean. The highest residential effective rate occurred in Kendall County at 2.61 percent, while the lowest was in Hardin County at 0.84 percent. Cook County, the home of metropolitan Chicago, had an effective property tax rate of 1.68 percent.',
+          'Within a county, individual homeowners’ effective rates may differ from these county averages. For example, a home in Cook County could have drastically different effective property tax rates depending on where it sits—a recent study found that a $250,000 home in Chicago in 2010 had an effective property tax rate of 1.28 percent, while a home with the same market value in Park Forest (also in Cook County) had an effective rate of 5.68 percent. ',
+          'It’s important to note than an effective property tax rate is not the same as the millage rate (that is, the statutory property tax rate levied by a local government).'],
+          callout: '',
+          source: ['Note: “Residential Effective Property Tax Rate” is calculated by dividing the total real estate (property) taxes paid in a county by the county’s total housing value (owner-occupied units only). The American Community Survey data used here is based on 5-year estimates (2009 to 2013). This data does not include commercial property.',
+          'Source: Census Bureau, American Community Survey; Taxpayers’ Federation of Illinois, Tax Facts, Volume 66, No. 3 (Summer 2013).']
+        },
+        {
+          url: 'illinois-had-5976-different-taxing-districts-2012',
+          name: 'Illinois Had 5,976 Different Taxing Districts in 2012',
+          subtitle: '',
+          image: 'images/7-4.svg',
+          format: 'square',
+          body: ['Property taxes are levied at the local level, and there are many types of local government entities with taxing authority, including counties, cities, towns, school districts, and special purpose districts (such as those for fire protection, hospitals, and airports).',
+          'Of the nearly 6,000 local taxing districts that existed in Illinois in 2012, the largest share were special districts (36.6 percent of the total number), followed by townships (24.0 percent), and cities, villages, and incorporated towns (21.3 percent).'],
+          callout: '',
+          source: ['Note: “School Districts” includes elementary, unit, high, non-high, and community college districts. “Special Districts” includes the following types of districts: fire protection, park, sanitary, forest preserve, mosquito abatement, public health, airport authority, library, hospital, street lighting, river conservancy, water authority, surface water protection, cemetery, soil and water conservation, auditorium authority, mass transit, watershed/flood control, multi-township assessment, water service, museum, solid waste disposal, rescue squad, and public water.',
+          'Source: Illinois Department of Revenue, 2012 Property Tax Statistics.']
         }
       ];
 
