Organize images, use png for large svg

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           url: 'metro-area-employment-illinois-very-different-from-non-metro',
           name: 'Metro-Area Employment in Illinois Is Very Different from Non-Metro',
           subtitle: 'Industry Employment as a Percent of Total Area Employment, Metro and Non-Metro Illinois (2013)',
-          image: 'images/1-4.svg',
+          image: 'images/1-4.png',
           format: 'square',
           body: ['State economies are diverse, and different areas of a state often have unique local economies, something that can be seen by comparing the largest sectors (based on the share of area total employment) in metro versus non-metro Illinois.',
             'For example, agriculture makes up 10.2 percent of Illinois’ non-metro employment but only 0.5 percent of metro-area employment. Similarly, while manufacturing, retail, and state and local government are prominent in both areas, these sectors make up a larger share of employment in non-metro areas of the state.'],
@@ -441,7 +441,7 @@
           url: 'illinois-taxes-at-a-glance',
           name: 'Illinois Taxes at a Glance',
           subtitle: '',
-          image: 'images/2-1.svg',
+          image: 'images/2-1.png',
           format: 'wide',
           body: ['This page provides a brief, broad overview of tax rates, tax collections, and other basic structural features of the Illinois tax system. '],
           callout: 'For all rankings on this page, 1 indicates the highest rank among the 50 states.',
@@ -484,7 +484,7 @@
           url: 'illinois-relies-heavily-on-federal-aid',
           name: 'Illinois, like All States, Relies Heavily on Federal Aid',
           subtitle: 'Federal Funding as a Percent of State Government General Revenues (FY 2013)',
-          image: 'images/2-5.svg',
+          image: 'images/2-5.png',
           format: 'wide',
           body: ['While state and local taxes are a large component of state revenue toolkits, federal transfers are also surprisingly sizeable. Illinois relied on federal funding for 25.9 percent of general revenues in 2013, compared to the national average of 30.0 percent. Federal funding in the states supports a variety of programs, including those related to public welfare, health, education, and transportation.'],
           callout: '',
@@ -539,7 +539,7 @@
           url: 'illinois-had-most-underfuned-pensions-in-us',
           name: 'Illinois Has the Most Under-Funded Public Pensions in the Country',
           subtitle: 'Funded Portion of State-Sponsored Pension Plans (2012)',
-          image: 'images/2-10.svg',
+          image: 'images/2-10.png',
           format: 'wide',
           body: ['Public pensions, or the retirement benefits promised to public employees, are an important state budgetary consideration. The degree to which a state meets these obligations offers a glimpse of that state’s financial soundness. This measure is referred to as a “funded ratio” because it estimates the amount of pension obligations that a state can pay at this time. As of 2012, Illinois could only pay for 40.4 percent of existing public pension liabilities—the least in the nation. '],
           callout: '',
@@ -583,7 +583,7 @@
           url: 'illinois-tax-bill',
           name: 'How Does the Illinois Individual Income Tax Impact Real People?',
           subtitle: 'Illinois Tax Bill',
-          image: 'images/3-3.svg',
+          image: 'images/3-3.png',
           format: 'wide',
           body: ['The way a state chooses to structure its income tax matters for real people. These six scenarios show how low- or high-income Illinois taxpayers with or without children fare under the code in Illinois and its six neighboring states. '],
           callout: '',
@@ -594,7 +594,7 @@
           url: 'illinois-taxes-compared-to-neighbors',
           name: 'How Does the Illinois Individual Income Tax Impact Real People?',
           subtitle: 'Tax Bills in Other Select States in the Region',
-          image: 'images/3-4.svg',
+          image: 'images/3-4.png',
           format: 'wide',
           body: ['The way a state chooses to structure its income tax matters for real people. These six scenarios show how low- or high-income Illinois taxpayers with or without children fare under the code in Illinois and its six neighboring states. '],
           callout: 'If these same Illinoisans lived in one of the states below, these would be their income tax bills. ',
@@ -659,7 +659,7 @@
           url: 'corporate-income-tax-rate-has-fluctuated-over-time',
           name: 'Corporate Income Tax Rate Has Fluctuated over Time',
           subtitle: 'Illinois’ Total Corporate Income Tax Rate (1969-2015)',
-          image: 'images/4-4.svg',
+          image: 'images/4-4.png',
           format: 'wide',
           body: ['Illinois’ corporate income tax is the 17th highest in the nation. The 7.75 percent rate includes two components: the general corporate income tax (with a current rate of 5.25 percent levied on net income) and what is known as the “Personal Property Replacement Tax” (PPRT) (an additional 2.5 percent rate, also levied on net income). The PPRT was added in 1979 to make up for reduced local tax revenues as a result of the removal of business personal property taxes.'],
           callout: '',
@@ -747,7 +747,7 @@
           url: 'not-all-sales-tax-expenditures-created-equal',
           name: 'Not All Sales Tax Expenditures Are Created Equal',
           subtitle: 'Illinois’ Sales and Use Tax Expenditures, by Type (FY 2013)',
-          image: 'images/5-5.svg',
+          image: 'images/5-5.png',
           format: 'wide',
           body: ['When states quantify tax expenditures, they often mistakenly lump structural provisions with social policy carve-outs, when the two should be distinct. The former are tools used to ensure the sales tax is correctly structured—such as exemptions for business input purchases (to avoid tax pyramiding). Approximately 34 percent of sales tax expenditures fall into this category. Social policy carve-outs are specific policy decisions enacted for a certain purpose (56 percent fall into this category).'],
           callout: '',
